fix(dockerfile): modify comments and remove unnecessary lines

--- a/golang-pipelne/Dockerfile
+++ b/golang-pipelne/Dockerfile
@@ -1,7 +1,7 @@
 FROM registry.access.redhat.com/ubi9/ubi:latest
 
-ARG dev=false
-ENV container oci
+
+ENV container=oci
 ENV USER=default
 
 USER root
@@ -10,29 +10,31 @@ USER root
 RUN dnf -y update-minimal --security --sec-severity=Important --sec-severity=Critical && \
 # Install git, nano & golang
 dnf install git nano delve golang golang-docs golang-tests -y; \
-# Install nodejs for SonarQube 
-dnf install nodejs -y; \
 # clear cache
 dnf clean all
 
+# Dev target
 FROM base AS dev
 COPY .devcontainer/devtools.sh /tmp/devtools.sh
 RUN  /tmp/devtools.sh
 USER default
-#---
+
+# DEPLOYMENT EXAMPLE:
+#-----------------------------
+
+# Prod target
 FROM base
 USER default
 
-# OPTIONAL DEPLOYMENT EXAMPLE:
-#-----------------------------
 ## Make App folder, copy project into container
-# WORKDIR /app
-# COPY . .
+WORKDIR /app
+## REPLACE: replace this COPY statement with project specific files/folders
+COPY . . 
 
 ## Install project requirements, build project
-# RUN go mod download 
-# RUN go build -o /app/run
+RUN go mod download; \
+go build -o /app/run
 
 ## Expose port and run app
-# EXPOSE 8080
-# CMD [ /app/run ]
+EXPOSE 8080
+CMD [ "/app/run" ]
