--- a/python-uv-pipeline/Dockerfile
+++ b/python-uv-pipeline/Dockerfile
@@ -1,7 +1,7 @@
 FROM registry.access.redhat.com/ubi9/ubi:latest
 
-ARG dev=false
-ENV container oci
+
+ENV container=oci
 ENV USER=default
 
 USER root
@@ -10,8 +10,6 @@ USER root
 RUN dnf -y update-minimal --security --sec-severity=Important --sec-severity=Critical && \
 # Install git, nano
 dnf install git nano  -y; \
-# Install nodejs for SonarQube 
-dnf install nodejs -y; \
 # clear cache
 dnf clean all
 
@@ -21,39 +19,32 @@ RUN source $HOME/.local/bin/env && uv python install
 ENV PYTHONUNBUFFERED=1
 RUN source $HOME/.local/bin/env && uv tool install ruff@latest
 
-# Install Trivy 
-RUN <<EOF cat >> /etc/yum.repos.d/trivy.repo
-[trivy]
-name=Trivy repository
-baseurl=https://aquasecurity.github.io/trivy-repo/rpm/releases/\$basearch/
-gpgcheck=1
-enabled=1
-gpgkey=https://aquasecurity.github.io/trivy-repo/rpm/public.key
-EOF
-RUN dnf update -y; dnf install trivy -y; dnf clean all
-
+# Dev target
 FROM base AS dev
 COPY .devcontainer/devtools.sh /tmp/devtools.sh
 RUN  /tmp/devtools.sh
 USER default
-#---
+
+# DEPLOYMENT EXAMPLE:
+#-----------------------------
+
+# Prod target
 FROM base
 USER default
 
-# OPTIONAL DEPLOYMENT EXAMPLE:
-#-----------------------------
 ## Make App folder, copy project into container
-# WORKDIR /app
-# COPY . .
+WORKDIR /app
+## REPLACE: replace this COPY statement with project specific files/folders
+COPY . . 
 
 ## Install project requirements, build project
-# RUN source $HOME/.local/bin/env && uv pip install .  
+RUN source $HOME/.local/bin/env && uv pip install .  
 
 ## Expose port and run app
-# EXPOSE 8080
+EXPOSE 8080
 
-# for uvicorn (FastAPI)
-# ENTRYPOINT [ "uv", "run", "fastapi", "run", "src/python_template/main.py", "--port", "8080", "--workers", "4" "--host", "0.0.0.0"]
+#for uvicorn (FastAPI)
+CMD [ "uv", "run", "fastapi", "run", "src/**/main.py", "--port", "8080", "--workers", "4" "--host", "0.0.0.0" ]
 
-# for gunicorn (Flask)
+# for gunicorn (eg. Flask)
 # CMD [ "GUNICORN_CMD_ARGS='--bind=0.0.0.0:8080 --workers=8'", "uv", "run", "--frozen", "gunicorn", "'src/python_template/main.py'" ]
