--- a/cpp-pipeline/Dockerfile
+++ b/cpp-pipeline/Dockerfile
@@ -1,7 +1,6 @@
 FROM registry.access.redhat.com/ubi9/ubi:latest AS base
 
-ARG dev=false
-ENV container oci
+ENV container=oci
 ENV USER=default
 
 USER root
@@ -13,25 +12,28 @@ dnf install git nano clang cmake gcc-c++ ninja-build meson gdb -y; \
 # Clear cache
 dnf clean all
 
-#----
+# Dev target
 FROM base AS dev
 COPY .devcontainer/devtools.sh /tmp/devtools.sh
 RUN  /tmp/devtools.sh
 USER default
-#---
+
+# DEPLOYMENT EXAMPLE:
+#-----------------------------
+
+# Prod target
 FROM base
 USER default
 
-# OPTIONAL DEPLOYMENT EXAMPLE:
-#-----------------------------
 ## Make App folder, copy project into container
-# WORKDIR /app
-# COPY . .
+WORKDIR /app
+## REPLACE: replace this COPY statement with project specific files/folders
+COPY . . 
 
 ## Install project requirements, build project
-# RUN cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -G "Ninja"
-# RUN cmake --build build --config Release
+RUN cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -G "Ninja"; \
+cmake --build build --config Release
 
 ## Expose port and run app
-# EXPOSE 8080
-# CMD [ /app/out/build/cpp-template  ]
+EXPOSE 8080
+CMD [ "/app/out/build/cpp-template"  ]
