--- a/gradle-pipeline/.github/workflows/gradle.yml
+++ b/gradle-pipeline/.github/workflows/gradle.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  
 
     - name: Run Custom Gradle action
       uses: ./.github/actions/gradle
