--- a/maven-pipeline/.github/workflows/maven.yml
+++ b/maven-pipeline/.github/workflows/maven.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  
 
     - name: Run Custom Maven action
       uses: ./.github/actions/maven
