--- a/python-pipeline/Dockerfile
+++ b/python-pipeline/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.access.redhat.com/ubi9/ubi:latest
+FROM registry.access.redhat.com/ubi9/ubi:latest AS base
 
 COPY .python-version .python-version
 
@@ -29,7 +29,6 @@ USER default
 
 # Prod target
 FROM base
-USER default
 
 ## Make App folder, copy project into container
 WORKDIR /app
@@ -39,8 +38,14 @@ COPY . .
 ## Install project requirements, build project
 RUN pip3 install --include-deps .[test,dev]
 
+## clarify permissions
+RUN chown -R default:0 /app && \
+    chmod -R g=u /app
+
 ## Expose port and run app
 EXPOSE 8080
+
+USER default
 
 # for uvicorn (FastAPI)
 CMD [ "fastapi", "run", "src/**/main.py", "--port", "8080", "--workers", "4" "--host", "0.0.0.0" ]
