fix(node): tweak nodejs install

--- a/node-pipeline/Dockerfile
+++ b/node-pipeline/Dockerfile
@@ -6,6 +6,8 @@ ENV USER=default
 
 USER root
 
+COPY .nvmrc .nvmrc
+
 # Check for package update
 RUN dnf -y update-minimal --security --sec-severity=Important --sec-severity=Critical && \
 # Install git & nano 
@@ -16,11 +18,12 @@ dnf clean all
 # Install nvm
 WORKDIR /root
 ADD https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh /root/
-RUN chmod +x /root/install.sh && /root/install.sh
-RUN export NVM_DIR="$HOME/.nvm"; \
+RUN mkdir -p /usr/local/nvm; 
+export NVM_DIR="/usr/local/nvm" && chmod +x ./install.sh && ./install.sh; \
 [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"; \ 
 [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion" && \
-nvm install 23
+# Install node version specified in .nvmrc
+nvm install
 
 # Dev target
 FROM base AS dev
@@ -40,7 +43,7 @@ WORKDIR /app
 COPY . . 
 
 ## Install project requirements, build project
-RUN npm install lite-server --save-dev \
+RUN npm install lite-server --save-dev; \
 npm build --prod
 
 ## clarify permissions
@@ -51,3 +54,6 @@ RUN chown -R default:0 /app && \
 EXPOSE 8080
 USER default
 CMD [ "lite-server --baseDir='dist/*/'"  ]
+
+# EXPOSE 3000
+#CMD ["/usr/local/nvm/nvm.sh;", "nvm install;", "npm", "install", "--global", "serve;", 'serve']
