--- a/maven-pipeline/.vscode/extensions.json
+++ b/maven-pipeline/.vscode/extensions.json
@@ -5,19 +5,28 @@
         "vscjava.vscode-java-pack",
         "vscjava.vscode-java-test",
         "vscjava.vscode-java-dependency",
-        // Java - extra
+        // Java
         "redhat.java",
-        "Oracle.oracle-java",
-        //xml
-        "redhat.vscode-xml",
         // Docker 
         "ms-vscode-remote.remote-containers",
         "ms-azuretools.vscode-docker",
         // Sonar 
         "SonarSource.sonarlint-vscode",
-        // Github
-        "GitHub.vscode-github-actions",
         // Trivy 
-        "AquaSecurityOfficial.trivy-vulnerability-scanner"
+        "AquaSecurityOfficial.trivy-vulnerability-scanner",
+        //Github - git
+        "GitHub.vscode-github-actions",
+        "eamodio.gitlens",
+        "bierner.markdown-mermaid",
+        // YAML / XML / CSV / Markdown
+        "redhat.vscode-yaml",
+        "redhat.vscode-xml",
+        "mechatroner.rainbow-csv",
+        // CSS / HTML 
+        "ecmel.vscode-html-css",
+        // prettier
+        "esbenp.prettier-vscode",
+        // .editorconfig 
+        "editorconfig.editorconfig"
     ]
 }
