--- a/python-poetry-pipeline/.vscode/extensions.json
+++ b/python-poetry-pipeline/.vscode/extensions.json
@@ -7,16 +7,26 @@
         "ms-python.mypy-type-checker",
         "ms-python.black-formatter",
         "ms-python.flake8",
-        // docker 
+        // Docker 
         "ms-vscode-remote.remote-containers",
         "ms-azuretools.vscode-docker",
-        // yaml
-        "redhat.vscode-yaml",
         // Sonar 
         "SonarSource.sonarlint-vscode",
-        // Trivy
+        // Trivy 
         "AquaSecurityOfficial.trivy-vulnerability-scanner",
-        // Github
+        //Github - git
         "GitHub.vscode-github-actions",
+        "eamodio.gitlens",
+        "bierner.markdown-mermaid",
+        // YAML / XML / CSV / Markdown
+        "redhat.vscode-yaml",
+        "redhat.vscode-xml",
+        "mechatroner.rainbow-csv",
+        // CSS / HTML 
+        "ecmel.vscode-html-css",
+        // prettier
+        "esbenp.prettier-vscode",
+        // .editorconfig 
+        "editorconfig.editorconfig"
     ]
 }
