braking(semgrep): init semgrep
BREAKING CHANGE: replaces SonarCloud with Semgrep

--- a/cpp-pipeline/.devcontainer/devcontainer.json
+++ b/cpp-pipeline/.devcontainer/devcontainer.json
@@ -26,7 +26,7 @@
 			"ms-vscode.cpptools-extension-pack",
 			// optional
 			"ms-azuretools.vscode-docker",
-			"SonarSource.sonarlint-vscode",
+			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
 			"eamodio.gitlens",
