--- a/golang-pipelne/.devcontainer/devcontainer.json
+++ b/golang-pipelne/.devcontainer/devcontainer.json
@@ -28,7 +28,7 @@
 			"golang.Go",
 			// optional
 			"ms-azuretools.vscode-docker",
-			"SonarSource.sonarlint-vscode",
+			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
 			"eamodio.gitlens",
