--- a/maven-pipeline/.devcontainer/devcontainer.json
+++ b/maven-pipeline/.devcontainer/devcontainer.json
@@ -31,7 +31,7 @@
 			"vscjava.vscode-java-dependency",
 			// optional
 			"ms-azuretools.vscode-docker",
-			"SonarSource.sonarlint-vscode",
+			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
 			"eamodio.gitlens",
