--- a/python-poetry-pipeline/.devcontainer/devcontainer.json
+++ b/python-poetry-pipeline/.devcontainer/devcontainer.json
@@ -31,7 +31,7 @@
 			"ms-python.flake8",
 			"ms-python.mypy-type-checker",
 			"ms-azuretools.vscode-docker",
-			"SonarSource.sonarlint-vscode",
+			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
 			"eamodio.gitlens",
