--- a/python-uv-pipeline/.devcontainer/devcontainer.json
+++ b/python-uv-pipeline/.devcontainer/devcontainer.json
@@ -29,7 +29,7 @@
 			"charliermarsh.ruff",
 			// optional
 			"ms-azuretools.vscode-docker",
-			"SonarSource.sonarlint-vscode",
+			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
 			"eamodio.gitlens",
