--- a/rust-pipeline/.devcontainer/devcontainer.json
+++ b/rust-pipeline/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
 			"rust-lang.rust-analyzer",
 			// optional
 			"ms-azuretools.vscode-docker",
-			"SonarSource.sonarlint-vscode",
+			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
 			"eamodio.gitlens",
