--- a/maven-pipeline/.github/actions/maven/action.yml
+++ b/maven-pipeline/.github/actions/maven/action.yml
@@ -11,12 +11,6 @@ inputs:
   java_version:
     description: 'Java Version'
     required: true
-  sonar_token:
-    description: 'Token for SonarCloud access'
-    required: false
-  sonar_args:
-    description: 'Custom SonarCloud arguments'
-    required: false
   docker_image_name:
     description: 'Docker image name'
     required: true
@@ -70,12 +64,24 @@ runs:
       shell: bash
       working-directory: ${{ inputs.source_dir }}
 
-    - name: Sonarcloud SAST
-      if: ${{ inputs.sonar_token != '' }}
-      run: |
-        mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:4.0.0.4121:sonar -Dsonar.token=${{ inputs.sonar_token }} ${{ inputs.sonar_args }}
-      shell: bash
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+    - name: Install Semgrep
+      run: pip install semgrep
+    - name: Run Semgrep scan and output to Github Security
       working-directory: ${{ inputs.source_dir }}
+      run: semgrep scan --sarif -o semgrep-output.sarif --oss-only
+    - name: Upload SARIF report to GitHub (even if previous step failed)
+      if: always()
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: semgrep-output.sarif
+    - name: Run Semgrep scan and fail on issues
+      working-directory: ${{ inputs.source_dir }}
+      run: semgrep scan --severity ERROR --severity WARNING --oss-only
+
 
     - name: Add QEMU support
       uses: docker/setup-qemu-action@v3
