--- a/node-pipeline/.github/actions/node/action.yml
+++ b/node-pipeline/.github/actions/node/action.yml
@@ -8,12 +8,6 @@ inputs:
   gitleaks_token:
     description: 'Organisational token for Gitleaks'
     required: false # only required for Organizations, not personal accounts
-  sonar_token:
-    description: 'Token for SonarCloud access'
-    required: false
-  sonar_args:
-    description: 'Custom SonarCloud arguments'
-    required: false
   docker_image_name:
     description: 'Docker image name'
     required: true
@@ -83,14 +77,24 @@ runs:
       working-directory: ${{ inputs.source_dir }}
       shell: bash
 
-    - name: Sonarcloud SAST
-      if: ${{ inputs.sonar_token != '' }}
-      uses: SonarSource/sonarqube-scan-action@v5.0.0
-      env:
-        GITHUB_TOKEN: ${{ inputs.github_token }}
-        SONAR_TOKEN: ${{ inputs.sonar_token }}
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
-        args: ${{ inputs.sonar_args }}
+        python-version: '3.11'
+    - name: Install Semgrep
+      run: pip install semgrep
+    - name: Run Semgrep scan and output to Github Security
+      working-directory: ${{ inputs.source_dir }}
+      run: semgrep scan --sarif -o semgrep-output.sarif --oss-only
+    - name: Upload SARIF report to GitHub (even if previous step failed)
+      if: always()
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: semgrep-output.sarif
+    - name: Run Semgrep scan and fail on issues
+      working-directory: ${{ inputs.source_dir }}
+      run: semgrep scan --severity ERROR --severity WARNING --oss-only
+
 
     - name: Add QEMU support
       uses: docker/setup-qemu-action@v3
