--- a/rust-pipeline/.vscode/extensions.json
+++ b/rust-pipeline/.vscode/extensions.json
@@ -7,7 +7,7 @@
         "ms-vscode-remote.remote-containers",
         "ms-azuretools.vscode-docker",
         // Sonar 
-        "SonarSource.sonarlint-vscode",
+        "Semgrep.semgrep",
         // Trivy 
         "AquaSecurityOfficial.trivy-vulnerability-scanner",
         //Github - git
