--- a/maven-pipeline/.github/actions/maven/action.yml
+++ b/maven-pipeline/.github/actions/maven/action.yml
@@ -25,6 +25,12 @@ inputs:
     required: true
     default: '.'
 
+permissions:
+  # Required to upload SARIF file to CodeQL. See: https://github.com/github/codeql-action/issues/2117
+  actions: read
+  contents: read
+  security-events: write
+
 runs:
   using: 'composite'
   steps:
@@ -77,7 +83,9 @@ runs:
       if: always()
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: semgrep-output.sarif
+      with:
+        sarif_file: ${{ inputs.source_dir }}/semgrep-output.sarif
+        category: semgrep
     - name: Run Semgrep scan and fail on issues
       working-directory: ${{ inputs.source_dir }}
       run: semgrep scan --severity ERROR --severity WARNING --oss-only
