--- a/python-poetry-pipeline/.github/actions/python-poetry/action.yml
+++ b/python-poetry-pipeline/.github/actions/python-poetry/action.yml
@@ -41,6 +41,12 @@ inputs:
     required: false
     default: ''
 
+permissions:
+  # Required to upload SARIF file to CodeQL. See: https://github.com/github/codeql-action/issues/2117
+  actions: read
+  contents: read
+  security-events: write
+
 runs:
   using: 'composite'
   steps:
@@ -189,7 +195,9 @@ runs:
       if: always()
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: semgrep-output.sarif
+      with:
+        sarif_file: ${{ inputs.source_dir }}/semgrep-output.sarif
+        category: semgrep
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
