--- a/python-uv-pipeline/.github/actions/python-uv/action.yml
+++ b/python-uv-pipeline/.github/actions/python-uv/action.yml
@@ -36,6 +36,12 @@ inputs:
 env:
   UV_SYSTEM_PYTHON: 1
 
+permissions:
+  # Required to upload SARIF file to CodeQL. See: https://github.com/github/codeql-action/issues/2117
+  actions: read
+  contents: read
+  security-events: write
+
 runs:
   using: 'composite'
   steps:
@@ -134,7 +140,9 @@ runs:
       if: always()
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: semgrep-output.sarif
+      with:
+        sarif_file: ${{ inputs.source_dir }}/semgrep-output.sarif
+        category: semgrep
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
