--- a/golang-pipelne/.devcontainer/devcontainer.json
+++ b/golang-pipelne/.devcontainer/devcontainer.json
@@ -44,7 +44,11 @@
 			"[go]": {
 			  "editor.defaultFormatter": "golang.Go",
 			},
-			 "editor.tabSize": 4
+			 "editor.tabSize": 4,
+			 "workbench.tree.indent": 14,
+			 "trivy.offlineScan": true
+			 //"files.autoSaveWhenNoErrors": true,
+			 //"files.autoSaveWorkspaceFilesOnly": true
 		  }
 		}
 	  }	  
