--- a/maven-pipeline/.devcontainer/devcontainer.json
+++ b/maven-pipeline/.devcontainer/devcontainer.json
@@ -47,7 +47,11 @@
 			"[java]": {
 			  "editor.defaultFormatter": "vscjava.vscode-maven",
 			},
-			 "editor.tabSize": 4
+			 "editor.tabSize": 4,
+			 "workbench.tree.indent": 14,
+			 "trivy.offlineScan": true
+			 //"files.autoSaveWhenNoErrors": true,
+			 //"files.autoSaveWorkspaceFilesOnly": true
 		  }
 		}
 	  }
