--- a/gradle-pipeline/.devcontainer/devcontainer.json
+++ b/gradle-pipeline/.devcontainer/devcontainer.json
@@ -46,7 +46,11 @@
 			"[java]": {
 			  "editor.defaultFormatter": "vscjava.vscode-gradle",
 			},
-			 "editor.tabSize": 4
+			 "editor.tabSize": 4,
+			 "workbench.tree.indent": 14,
+			 "trivy.offlineScan": true
+			 //"files.autoSaveWhenNoErrors": true,
+			 //"files.autoSaveWorkspaceFilesOnly": true
 		  }
 		}
 	  }
