--- a/node-pipeline/.devcontainer/devcontainer.json
+++ b/node-pipeline/.devcontainer/devcontainer.json
@@ -47,7 +47,11 @@
 			"[typescript]": {
 			  "editor.defaultFormatter": "ms-vscode.vscode-typescript-next",
 			},
-			 "editor.tabSize": 4
+			 "editor.tabSize": 4,
+			 "workbench.tree.indent": 14,
+			 "trivy.offlineScan": true
+			 //"files.autoSaveWhenNoErrors": true,
+			 //"files.autoSaveWorkspaceFilesOnly": true
 		  }
 		}
 	  }
