--- a/node-pipeline/.vscode/settings.json
+++ b/node-pipeline/.vscode/settings.json
@@ -1,14 +1,10 @@
 {
-    "files.autoSaveWhenNoErrors": true,
-    "files.autoSaveWorkspaceFilesOnly": true,
-    "dev.containers.dockerComposePath": "podman-compose",
-    "dev.containers.dockerPath": "podman",
-    "docker.commands.composeUp": [
-        {
-            "label": "Compose Up",
-            "template": "${composeCommand} ${configurationFile} up ${detached} ${build}"
-        }
-    ],
-    "workbench.tree.indent": 14,
-    "trivy.offlineScan": true
+    // "dev.containers.dockerComposePath": "podman-compose",
+    // "dev.containers.dockerPath": "podman",
+    // "docker.commands.composeUp": [
+    //     {
+    //         "label": "Compose Up",
+    //         "template": "${composeCommand} ${configurationFile} up ${detached} ${build}"
+    //     }
+    // ]
 }
