--- a/rust-pipeline/.devcontainer/devcontainer.json
+++ b/rust-pipeline/.devcontainer/devcontainer.json
@@ -46,9 +46,13 @@
 			"[rust]": {
 			  "editor.defaultFormatter": "rust-lang.rust-analyzer",
 			},
-			 "editor.tabSize": 4
+			 "editor.tabSize": 4,
+			 "workbench.tree.indent": 14,
+			 "trivy.offlineScan": true
+			 //"files.autoSaveWhenNoErrors": true,
+			 //"files.autoSaveWorkspaceFilesOnly": true,
 		  }
 		}
 	  }//,
-	  //"postAttachCommand": "cargo new hello_world" 
+	  //"postAttachCommand": "cargo new your_project" 
 }
