feat(spelling): add extension for spelling

--- a/gradle-pipeline/.vscode/extensions.json
+++ b/gradle-pipeline/.vscode/extensions.json
@@ -28,6 +28,8 @@
         // prettier
         "esbenp.prettier-vscode",
         // .editorconfig 
-        "editorconfig.editorconfig"
+        "editorconfig.editorconfig",
+        // spelling 
+        "streetsidesoftware.code-spell-checker"
     ]
 }
