--- a/python-uv-pipeline/.vscode/extensions.json
+++ b/python-uv-pipeline/.vscode/extensions.json
@@ -25,7 +25,9 @@
         // prettier
         "esbenp.prettier-vscode",
         // .editorconfig 
-        "editorconfig.editorconfig"
+        "editorconfig.editorconfig",
+        // spelling 
+        "streetsidesoftware.code-spell-checker"
     ]
 }
 
