--- a/maven-pipeline/.vscode/extensions.json
+++ b/maven-pipeline/.vscode/extensions.json
@@ -27,6 +27,8 @@
         // prettier
         "esbenp.prettier-vscode",
         // .editorconfig 
-        "editorconfig.editorconfig"
+        "editorconfig.editorconfig",
+        // spelling 
+        "streetsidesoftware.code-spell-checker"
     ]
 }
