--- a/rust-pipeline/.vscode/extensions.json
+++ b/rust-pipeline/.vscode/extensions.json
@@ -23,7 +23,9 @@
         // prettier
         "esbenp.prettier-vscode",
         // .editorconfig 
-        "editorconfig.editorconfig"
+        "editorconfig.editorconfig",
+        // spelling 
+        "streetsidesoftware.code-spell-checker"
     ]
 }
 
