--- a/python-poetry-pipeline/.github/actions/python-poetry/action.yml
+++ b/python-poetry-pipeline/.github/actions/python-poetry/action.yml
@@ -185,19 +185,24 @@ runs:
       run: |
         sed -i 's@'$GITHUB_WORKSPACE'@/github/workspace/@g' $GITHUB_WORKSPACE/${{ inputs.pytest_coverage_xml_file_name }}
 
-    # Install and run Semgrep scan
     - name: Install Semgrep
       run: pip install semgrep
-    - name: Run Semgrep scan and fail on issues
+      shell: bash
+    - name: Run Semgrep scan and output to Github Security
       working-directory: ${{ inputs.source_dir }}
-      run: semgrep scan --sarif -o semgrep-output.sarif --oss-only --error
+      run: semgrep scan --sarif -o semgrep-output.sarif --oss-only
+      shell: bash
     - name: Upload SARIF report to GitHub (even if previous step failed)
       if: always()
       uses: github/codeql-action/upload-sarif@v2
       with:
-      with:
         sarif_file: ${{ inputs.source_dir }}/semgrep-output.sarif
         category: semgrep
+        
+    - name: Run Semgrep scan and fail on issues
+      working-directory: ${{ inputs.source_dir }}
+      run: semgrep scan --severity ERROR --severity WARNING --oss-only
+      shell: bash
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
