fix(actions): fix upload sarif path problem

--- a/node-pipeline/.github/actions/node/action.yml
+++ b/node-pipeline/.github/actions/node/action.yml
@@ -23,7 +23,6 @@ inputs:
     default: '.'
 
 permissions:
-  # Required to upload SARIF file to CodeQL. See: https://github.com/github/codeql-action/issues/2117
   actions: read
   contents: read
   security-events: write
@@ -92,13 +91,13 @@ runs:
       shell: bash
     - name: Run Semgrep scan and output to Github Security
       working-directory: ${{ inputs.source_dir }}
-      run: semgrep scan --sarif -o semgrep-output.sarif --oss-only
+      run: semgrep scan --sarif -o ${{ github.workspace }}/semgrep-output.sarif --oss-only
       shell: bash
     - name: Upload SARIF report to GitHub (even if previous step failed)
       if: always()
       uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: ${{ inputs.source_dir }}/semgrep-output.sarif
+        sarif_file: semgrep-output.sarif
         category: semgrep
 
     - name: Run Semgrep scan and fail on issues
