--- a/node-pipeline/.github/workflows/node.yml
+++ b/node-pipeline/.github/workflows/node.yml
@@ -15,6 +15,8 @@ jobs:
       pull-requests: write
       id-token: write
       packages: write
+      actions: read
+      security-events: write
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
