--- a/rust-pipeline/.github/workflows/rust.yml
+++ b/rust-pipeline/.github/workflows/rust.yml
@@ -14,6 +14,8 @@ jobs:
       pull-requests: write
       id-token: write
       packages: write
+      actions: read
+      security-events: write
     steps:
     - name: Checkout
       uses: actions/checkout@v4
